fix(defi-landing): ruble icon wrap fixes#2

--- a/src/features/landing-checkout/styles.module.scss
+++ b/src/features/landing-checkout/styles.module.scss
@@ -74,6 +74,8 @@
     font-weight: 700;
     font-size: 24px;
     line-height: 34px;
+    display: flex;
+    align-items: center;
     color: var(--gray);
     text-decoration: line-through;
 
@@ -88,6 +90,8 @@
     font-weight: 900;
     font-size: 36px;
     line-height: 46px;
+    display: flex;
+    align-items: center;
     margin-bottom: 40px;
     color: var(--black);
 
